# crypto_misc_jupyter

./: cpcv_util.py  ftx_poloniex.ipynb  funding_rate.ipynb  list_xrpbtc_exchanges.ipynb  optuna_util.py
cpcv_test/: cpcv_test.ipynb
disp_atr_trade_timing/: disp_ATR_timing.ipynb
ftx_funding_rate/: funding_rate.ipynb
ftx_volume_history/: FTX_volume_history.ipynb
lightgbm_exercise/: lightgbm_exercise.ipynb
richman_dollarbar/: FTX_volume_history.ipynb  cpcv_util.py  df_dollar_ohlcv_validation.pkl  disp_ATR_timing.ipynb  optuna_util.py  richman_dollarbar.ipynb
tokio-tungstenite-test/: Cargo.toml
tokio-tungstenite-test/src/: main.rs
