[package]
name = "tokio-tungstenite-test"
version = "0.1.0"
edition = "2021"
authors = ["WannabeBotter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"
url = "*"
tokio-tungstenite = { features = ["native-tls"] }
serde_json = "*"
